@@ -19,7 +19,6 @@ if __FILE__ == $0
   list_filename = ARGV[0] # e.g.) regular_use_force_2byte+personal_names.txt
   return if ARGV[0] == nil
   base_codepoint = ARGV[1] ? ARGV[1].to_i(16) : 0x4E00
-  fold_count = ARGV[2] ? ARGV[2].to_i : 70
   template_filename = "GetGlyphRangesJapanese_imgui_draw.cpp.template"
 
   # ERB : template engine in the Ruby standard library
@@ -33,14 +32,21 @@ if __FILE__ == $0
   # Build the actual string of accumulative offsets used in the C++ implementation code
   accumulative_offsets_buf = StringIO.new("")
   start_new_line = true
+  # Ref. "void GlyphRangesPrintRelativeOffsets" implementation in the issue "Font Texture allocates too much memory for Unicode-supported (Chinese) fonts. #1859"
+  #      https://github.com/ocornut/imgui/issues/1859#issuecomment-395023812
+  MAX_LINE_SIZE = 139
+  line_size = 0
   accumulative_offsets_array.each_with_index do |ofs, i|
     if start_new_line
       accumulative_offsets_buf << "        " # indent
       start_new_line = false
     end
-    accumulative_offsets_buf << "#{ofs},"
-    if i > 0 && i % fold_count == 0
+    ofs = "#{ofs},"
+    accumulative_offsets_buf << ofs
+    line_size += ofs.length
+    if i > 0 && line_size > MAX_LINE_SIZE
       accumulative_offsets_buf << "\n"
+      line_size = 0
       start_new_line = true
     end
   end
